fixed image sizes, truncate text

--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ div a:hover {
 }
 
 .product-table-image {
-   max-width: 200px;
+    height: 200px;
+   object-fit: contain;
    align-self: center;
 }
 
